--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p><mark>Every year, the town of Negotin organizes a music festival in his honor called Mokranjčevi dani (<i>Days of Mokranjac</i>). The town also has a Mokranjac museum.</mark></p>
     <!--id and class attributes are not necessery in this assignment.-->
 	<hr>
+<h2>Naslov h2</h2>
     
 </body>
 
